Fix SCAM sample to be treeshakable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -529,4 +529,7 @@
 <!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
+<!-- IF YOU DE-COMMENT NEXT LINE YOU'LL FIND ONLY sc-scam1 IN YOUR BUNDLE main-xxx.js , 
+     BUT IF YOU DON'T USE EITHER SCAM COMPONENT, THEY WILL BE CORRECTLY TREESHAKED! -->
+<!--<app-sc-scam1></app-sc-scam1>-->
 
